# swiss-knife

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README-CN.md  README.md  deny.toml
.github/workflows/: build.yml
docs/: cli-improvements-summary.md  s3upload-README.md
scripts/: convert.sh
specs/: 0001-idea.md  0002-rust-idea.md  0003-imgen.md  0004-s3upload-design.md  0005-s3upload-concurrency-plan.md  0006-s3upload-improvements.md  0007-implementation-summary.md  0008-phase3-4-summary.md  0009-pdf2jpg-design.md  instructions.md  s3upload-README.md  s3upload-design.md
specs/update-deps-latest-version/: code-changes.md
src/: config.rs  convert.rs  imgen.rs  lib.rs  openai.rs  pdf2jpg.rs  s3upload.rs
src/s3/: client.rs  compare.rs  error.rs  helpers.rs  mod.rs  multipart.rs  presign.rs  upload.rs
