[package]
name = "swiss-knife"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "convert"
path = "src/convert.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "multipart",
  "stream",
  "json",
] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
rayon = "1.11"
indicatif = "0.17"
console = "0.15"
