[package]
name = "swiss-knife"
version = "0.2.1"
edition = "2024"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
homepage = "https://github.com/tyrchen/swiss-knife"
repository = "https://github.com/tyrchen/swiss-knife"
description = "A collection of useful Rust CLI tools for various automation tasks"
license = "MIT"
readme = "README.md"
keywords = ["cli", "utility", "tools", "automation", "video"]
categories = ["command-line-utilities", "multimedia"]
exclude = [
  "specs/",
  "scripts/",
  "*.mp4",
  "*.mp3",
  "*.txt",
  "target/",
  ".git/",
  ".gitignore",
]

[[bin]]
name = "convert"
path = "src/convert.rs"

[[bin]]
name = "imgen"
path = "src/imgen.rs"

[[bin]]
name = "s3upload"
path = "src/s3upload.rs"

[[bin]]
name = "pdf2jpg"
path = "src/pdf2jpg.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.28", default-features = false, features = [
  "rustls-tls",
  "multipart",
  "stream",
  "json",
] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
rayon = "1.11"
indicatif = "0.18"
console = "0.16.2"
blake3 = "1.8.2"
serde_yaml = "0.9"
slug = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
base64 = "0.22"
dotenv = "0.15"
aws-config = { version = "1.8.12", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.119"
walkdir = "2.5"
thiserror = "2.0"
md-5 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.24"

[profile.release]
opt-level = "z"   # Optimize for size
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Single codegen unit for better optimization
strip = true      # Strip symbols from binary
panic = "abort"   # Abort on panic instead of unwinding

[profile.release-with-debug]
inherits = "release"
strip = false        # Keep symbols for debugging
